# gde2-system-monitor

./: AUTHORS  Makefile.am  NEWS  NEWS.GNOME  README  README.md  autogen.sh  configure.ac  gde2-system-monitor.1  gde2-system-monitor.appdata.xml.in  gde2-system-monitor.desktop.in.in
.tx/: config
help/: ChangeLog  Makefile.am
help/C/: index.docbook
help/ar/: ar.po
help/bg/: bg.po
help/ca/: ca.po
help/cs/: cs.po
help/da/: da.po
help/de/: de.po
help/el/: el.po
help/es/: es.po
help/fr/: fr.po
help/oc/: oc.po
help/pa/: pa.po
help/sv/: sv.po
help/zh_CN/: zh_CN.po
pixmaps/: Makefile.am
po/: ChangeLog  POTFILES.in  POTFILES.skip  am.po  ar.po  as.po  ast.po  az.po  be.po  be@latin.po  bg.po  bn.po  bn_IN.po  br.po  bs.po  ca.po  ca@valencia.po  cmn.po  cs.po  cy.po  da.po  de.po  dz.po  el.po  en@shaw.po  en_AU.po  en_CA.po  en_GB.po  eo.po  es.po  es_MX.po  et.po  eu.po  fa.po  fi.po  fr.po  fr_CA.po  ga.po  gl.po  gnome-copyrights.txt  (+60 more)
src/: Makefile.am  callbacks.cpp  defaulttable.h  disks.h  gde2-system-monitor.convert  gsm_color_button.c  gsm_color_button.h  load-graph.cpp  memmaps.cpp  org.gde2.system-monitor.gschema.xml.in  prettytable.cpp  procdialogs.cpp  procman.cpp  procman.h  procman_gde2su.cpp  procman_gde2su.h  procman_gksu.h  procproperties.cpp  proctable.cpp  selection.h  settings-keys.cpp  sysinfo.cpp  sysinfo.h  util.cpp  util.h
